Navbar fixed and white spaces removed

--- a/src/Components/Home/TS/TS.css
+++ b/src/Components/Home/TS/TS.css
@@ -1,6 +1,5 @@
 .TS{
     width: 100%;
-    min-height: 100vh;
     margin-top: 80px;
     display: flex;
     flex-direction: column;
